--- a/plugin.yml
+++ b/plugin.yml
@@ -15,4 +15,6 @@ configuration:
       type: string
     endpoint:
       type: string
+    clean:
+      type: boolean
   additionalProperties: false
