fix: adjust name of skip save property

--- a/plugin.yml
+++ b/plugin.yml
@@ -17,6 +17,6 @@ configuration:
       type: string
     clean:
       type: boolean
-    skip_save:
+    skip-save:
       type: boolean
   additionalProperties: false
