fix: rename skip to nosave

--- a/plugin.yml
+++ b/plugin.yml
@@ -17,6 +17,6 @@ configuration:
       type: string
     clean:
       type: boolean
-    skip-save:
+    nosave:
       type: boolean
   additionalProperties: false
