chore: update flags for 1.9.0

--- a/plugin.yml
+++ b/plugin.yml
@@ -9,6 +9,8 @@ configuration:
       type: string
     key:
       type: string
+    fallback-branch:
+      type: string
     repo:
       type: string
     paths:
